--- a/style.css
+++ b/style.css
@@ -67,11 +67,25 @@ button {
     cursor: pointer;
 }
 
+
+.banner .button-start-now button {
+    text-transform: uppercase;
+    padding: 10px 15px;
+    border: 2px solid green;
+    border-radius: 20px;
+    margin-top: 25px;
+    cursor: pointer;
+    color: red;
+}
+
+
+
+
 /* .content-center {
     height: 50px;
     width: 100%;
-     border: 1px solid red;
-}  */
+    border: 1px solid red;
+} */
 
 .left,
 .center,
